--- a/index.html
+++ b/index.html
@@ -6,15 +6,192 @@
         <title>Ем колбасу</title>
         <meta name="description" content="Сайт Ем Колбасу" />
         <meta name="keywords" content="Сайт Ем Колбасу" />
-        <link rel="apple-touch-icon" sizes="180x180" href="../../images/favicon/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="../../images/favicon/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="../../images/favicon/favicon-16x16.png">
-        <link rel="manifest" href="../../images/favicon/site.webmanifest">
+        <link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
+        <link rel="manifest" href="/images/favicon/site.webmanifest">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="../css/style.css">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
-    <body> HEADER HEADING FILTER TILE FOOTER <script src="../js/script.js"></script>
+    <body>
+        <header class="header">
+            <div class="header__container">
+                <div class="header__wrapper">
+                    <div class="header__logo">
+                        <img src="./images/logo/logo.png" alt="Логотип сайта">
+                    </div>
+                    <div class="header__name">Ем колбасу</div>
+                </div>
+            </div>
+        </header>
+        <main class="main">
+            <div class="main__container">
+                <h1 class="main-heading">Полезные сайты про колбасы: <br>магазины, рецепты, производство</h1>
+                <div class="filter js-filter">
+                    <button class="filter__btn filter__btn_active">Все</button>
+                    <button class="filter__btn">Магазины колбас</button>
+                    <button class="filter__btn">Рецепты</button>
+                    <button class="filter__btn">Все для приготовления</button>
+                </div>
+                <div class="main__tiles js-tiles-list">
+                    <div class="tile">
+                        <div class="tile__image">
+                            <img src="./images/tiles/myasodelie.jpeg" alt="Сайт myasodelie.ru">
+                        </div>
+                        <div class="tile__description">
+                            <div class="tile__categories">
+                                <div class="tile__categories-item">#Рецепты</div>
+                                <div class="tile__categories-item">#Все для приготовления</div>
+                                <div class="tile__categories-item">#Магазины колбас</div>
+                            </div>
+                            <h2 class="tile__heading">Мясоделие</h2>
+                            <div class="tile__text">Товары для производства колбас</div>
+                            <a href="" class="tile__button" target="_blank">Перейти</a>
+                        </div>
+                    </div>
+                    <div class="tile">
+                        <div class="tile__image">
+                            <img src="./images/tiles/myasodelie.jpeg" alt="Сайт myasodelie.ru">
+                        </div>
+                        <div class="tile__description">
+                            <div class="tile__categories">
+                                <div class="tile__categories-item">#Рецепты</div>
+                                <div class="tile__categories-item">#Все для приготовления</div>
+                                <div class="tile__categories-item">#Магазины колбас</div>
+                            </div>
+                            <h2 class="tile__heading">Мясоделие</h2>
+                            <div class="tile__text">Товары для производства колбас</div>
+                            <a href="" class="tile__button" target="_blank">Перейти</a>
+                        </div>
+                    </div>
+                    <div class="tile">
+                        <div class="tile__image">
+                            <img src="./images/tiles/myasodelie.jpeg" alt="Сайт myasodelie.ru">
+                        </div>
+                        <div class="tile__description">
+                            <div class="tile__categories">
+                                <div class="tile__categories-item">#Рецепты</div>
+                                <div class="tile__categories-item">#Все для приготовления</div>
+                                <div class="tile__categories-item">#Магазины колбас</div>
+                            </div>
+                            <h2 class="tile__heading">Мясоделие</h2>
+                            <div class="tile__text">Товары для производства колбас</div>
+                            <a href="" class="tile__button" target="_blank">Перейти</a>
+                        </div>
+                    </div>
+                    <div class="tile">
+                        <div class="tile__image">
+                            <img src="./images/tiles/myasodelie.jpeg" alt="Сайт myasodelie.ru">
+                        </div>
+                        <div class="tile__description">
+                            <div class="tile__categories">
+                                <div class="tile__categories-item">#Рецепты</div>
+                                <div class="tile__categories-item">#Все для приготовления</div>
+                                <div class="tile__categories-item">#Магазины колбас</div>
+                            </div>
+                            <h2 class="tile__heading">Мясоделие</h2>
+                            <div class="tile__text">Товары для производства колбас</div>
+                            <a href="" class="tile__button" target="_blank">Перейти</a>
+                        </div>
+                    </div>
+                    <div class="tile">
+                        <div class="tile__image">
+                            <img src="./images/tiles/myasodelie.jpeg" alt="Сайт myasodelie.ru">
+                        </div>
+                        <div class="tile__description">
+                            <div class="tile__categories">
+                                <div class="tile__categories-item">#Рецепты</div>
+                                <div class="tile__categories-item">#Все для приготовления</div>
+                                <div class="tile__categories-item">#Магазины колбас</div>
+                            </div>
+                            <h2 class="tile__heading">Мясоделие</h2>
+                            <div class="tile__text">Товары для производства колбас</div>
+                            <a href="" class="tile__button" target="_blank">Перейти</a>
+                        </div>
+                    </div>
+                    <div class="tile">
+                        <div class="tile__image">
+                            <img src="./images/tiles/myasodelie.jpeg" alt="Сайт myasodelie.ru">
+                        </div>
+                        <div class="tile__description">
+                            <div class="tile__categories">
+                                <div class="tile__categories-item">#Рецепты</div>
+                                <div class="tile__categories-item">#Все для приготовления</div>
+                                <div class="tile__categories-item">#Магазины колбас</div>
+                            </div>
+                            <h2 class="tile__heading">Мясоделие</h2>
+                            <div class="tile__text">Товары для производства колбас</div>
+                            <a href="" class="tile__button" target="_blank">Перейти</a>
+                        </div>
+                    </div>
+                    <div class="tile">
+                        <div class="tile__image">
+                            <img src="./images/tiles/myasodelie.jpeg" alt="Сайт myasodelie.ru">
+                        </div>
+                        <div class="tile__description">
+                            <div class="tile__categories">
+                                <div class="tile__categories-item">#Рецепты</div>
+                                <div class="tile__categories-item">#Все для приготовления</div>
+                                <div class="tile__categories-item">#Магазины колбас</div>
+                            </div>
+                            <h2 class="tile__heading">Мясоделие</h2>
+                            <div class="tile__text">Товары для производства колбас</div>
+                            <a href="" class="tile__button" target="_blank">Перейти</a>
+                        </div>
+                    </div>
+                    <div class="tile">
+                        <div class="tile__image">
+                            <img src="./images/tiles/myasodelie.jpeg" alt="Сайт myasodelie.ru">
+                        </div>
+                        <div class="tile__description">
+                            <div class="tile__categories">
+                                <div class="tile__categories-item">#Рецепты</div>
+                                <div class="tile__categories-item">#Все для приготовления</div>
+                                <div class="tile__categories-item">#Магазины колбас</div>
+                            </div>
+                            <h2 class="tile__heading">Мясоделие</h2>
+                            <div class="tile__text">Товары для производства колбас</div>
+                            <a href="" class="tile__button" target="_blank">Перейти</a>
+                        </div>
+                    </div>
+                    <div class="tile">
+                        <div class="tile__image">
+                            <img src="./images/tiles/myasodelie.jpeg" alt="Сайт myasodelie.ru">
+                        </div>
+                        <div class="tile__description">
+                            <div class="tile__categories">
+                                <div class="tile__categories-item">#Рецепты</div>
+                                <div class="tile__categories-item">#Все для приготовления</div>
+                                <div class="tile__categories-item">#Магазины колбас</div>
+                            </div>
+                            <h2 class="tile__heading">Мясоделие</h2>
+                            <div class="tile__text">Товары для производства колбас</div>
+                            <a href="" class="tile__button" target="_blank">Перейти</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="text">
+                    <p>Если вы ценитель изысканного вкуса ароматной домашней колбасы или ищете, где купить качественные колбасные изделия — вы нашли идеальный ресурс. Наш каталог — это уникальная коллекция, объединяющая все, что связано с искусством производства и изготовления колбасы.</p>
+                    <p>Для гурманов и кулинаров мы собрали лучшие сайты с проверенными рецептами, позволяющими освоить изготовление колбасных деликатесов в домашних условиях. От классической сыровяленой до авторских рецептов с неожиданными сочетаниями — здесь найдется вдохновение для каждого.</p>
+                    <p>Интересует продажа готовой продукции? В разделе «Магазин» представлены проверенные онлайн-витрины, где можно купить колбасу от ведущих производителей и фермерских хозяйств. Ищете элитные копченые изделия или традиционные вареные сорта — выбор огромен.</p>
+                    <p>Для тех, кто задумывается о собственном производстве, мы отобрали ресурсы с профессиональным оборудованием и специями для изготовления колбас. От домашних наборов до промышленных линий — всё для старта и развития.</p>
+                    <p>Колбасные изделия — это целая вселенная вкусов и ароматов. Наша цель — помочь вам в ней ориентироваться: находить лучшую колбасу, осваивать рецепты, находить товары для творчества. Погрузитесь в мир колбасного мастерства вместе с нами!</p>
+                </div>
+            </div>
+        </main>
+        <footer class="footer">
+            <div class="footer__container">
+                <div class="footer__wrapper">
+                    <div class="footer__copyright">&copy;&nbsp;<script>
+                            document.write(new Date().getFullYear())
+                        </script>&nbsp;em-kolba.su. Все права защищены.</div>
+                    <div class="footer__contacts">Контакты <a href="mailto:edosjoy@yandex.ru">edosjoy@yandex.ru</a></div>
+                    <div class="footer__domain">Домен продается:<br>по всем вопросам обращайтесь на указанную почту</div>
+                </div>
+            </div>
+        </footer>
+        <script src="./js/script.js"></script>
     </body>
 </html>
