--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="https://em-kolba.su/css/style.css">
     </head>
     <body>
         <header class="header">
