--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@
                 </div>
             </div>
         </header>
+        <main class="main">
+            <div class="main__container">
+                <h1 class="main-heading">Полезные сайты про колбасы: <br>магазины, рецепты, производство</h1>
+                <div class="filter js-filter"></div>
+                <div class="main__tiles js-tiles-list"></div>
+                <div class="text">
+                    <p>Если вы ценитель изысканного вкуса ароматной домашней колбасы или ищете, где купить качественные колбасные изделия — вы нашли идеальный ресурс. Наш каталог — это уникальная коллекция, объединяющая все, что связано с искусством производства и изготовления колбасы.</p>
+                    <p>Для гурманов и кулинаров мы собрали лучшие сайты с проверенными рецептами, позволяющими освоить изготовление колбасных деликатесов в домашних условиях. От классической сыровяленой до авторских рецептов с неожиданными сочетаниями — здесь найдется вдохновение для каждого.</p>
+                    <p>Интересует продажа готовой продукции? В разделе «Магазин» представлены проверенные онлайн-витрины, где можно купить колбасу от ведущих производителей и фермерских хозяйств. Ищете элитные копченые изделия или традиционные вареные сорта — выбор огромен.</p>
+                    <p>Для тех, кто задумывается о собственном производстве, мы отобрали ресурсы с профессиональным оборудованием и специями для изготовления колбас. От домашних наборов до промышленных линий — всё для старта и развития.</p>
+                    <p>Колбасные изделия — это целая вселенная вкусов и ароматов. Наша цель — помочь вам в ней ориентироваться: находить лучшую колбасу, осваивать рецепты, находить товары для творчества. Погрузитесь в мир колбасного мастерства вместе с нами!</p>
+                </div>
+            </div>
+        </main>
         <footer class="footer">
             <div class="footer__container">
                 <div class="footer__wrapper">
